--- a/config/database.yml
+++ b/config/database.yml
@@ -1,17 +1,20 @@
 development:
   adapter: postgresql
   database: dorian_dev
+  host: localhost
   pool: 5
   timeout: 5000
 
 test:
   adapter: postgresql
   database: dorian_test
+  host: localhost
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
   database: dorian_prod
+  host: localhost
   pool: 5
   timeout: 5000
