--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,18 @@
 development:
-  adapter: postgresql
-  database: dorian_dev
-  host: localhost
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
 
 test:
-  adapter: postgresql
-  database: dorian_test
-  host: localhost
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: dorian_prod
+  database: skryl_prod
   host: localhost
   pool: 5
   timeout: 5000
